# TFM_Earthquake_forecasting_based_on_Transformers

./: README.md
notebooks/: 1_Preprocesado_inicial.ipynb  2_Analisis_estadistico.ipynb  3_Parametros_sismicos_entrada.ipynb  4_Vector_objetivo.ipynb  5_Vector_entrada_RandomForest.ipynb  5_Vector_entrada_Transformer.ipynb  Crear_fichero_toml.ipynb  main_notebook.ipynb  pyproject.toml
outputs/: 2_Analisis_estadistico_zona_31.ipynb  2_Analisis_estadistico_zona_37.ipynb  2_Analisis_estadistico_zona_39.ipynb  2_Analisis_estadistico_zona_55.ipynb  3_Parametros_sismicos_entrada_zona_31.ipynb  3_Parametros_sismicos_entrada_zona_37.ipynb  3_Parametros_sismicos_entrada_zona_39.ipynb  3_Parametros_sismicos_entrada_zona_55.ipynb  4_Vector_objetivo_zona_31.ipynb  4_Vector_objetivo_zona_37.ipynb  4_Vector_objetivo_zona_39.ipynb  4_Vector_objetivo_zona_55.ipynb  5_Vector_entrada_LightGBM_Jenks_zona_31.ipynb  5_Vector_entrada_LightGBM_Jenks_zona_37.ipynb  5_Vector_entrada_LightGBM_Jenks_zona_39.ipynb  5_Vector_entrada_LightGBM_Jenks_zona_55.ipynb  5_Vector_entrada_LightGBM_cuartiles_zona_31.ipynb  5_Vector_entrada_LightGBM_cuartiles_zona_37.ipynb  5_Vector_entrada_LightGBM_cuartiles_zona_39.ipynb  5_Vector_entrada_LightGBM_cuartiles_zona_55.ipynb  5_Vector_entrada_RandomForest_Jenks_zona_31.ipynb  5_Vector_entrada_RandomForest_Jenks_zona_37.ipynb  5_Vector_entrada_RandomForest_Jenks_zona_39.ipynb  5_Vector_entrada_RandomForest_Jenks_zona_55.ipynb  5_Vector_entrada_RandomForest_cuartiles_zona_31.ipynb  5_Vector_entrada_RandomForest_cuartiles_zona_37.ipynb  best_config.json  (+12 more)
(+19 files in other folders)
